--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "HenriettaSu",
   "version": "1.0.0",
-  "description": "Package.json of my homepage",
+  "description": "Package.json for Echarts-export. If you need to use that to transform the excel.xlsx to json.json, you should install gulp-sheets2json. Also you should uncomment the related shortcut in gulpfile.js. Installing with npm: $ npm install --save-dev gulp-sheets2json",
   "main": "gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.1",
@@ -19,7 +19,6 @@
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sheets2json": "^1.0.1",
     "path": "^0.12.7"
   },
   "scripts": {
